--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# More
+.vsconfig
+.vscode/
+.idea/
+
+Assets/Sources/
